Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-6178

Impossible to pass object as argument to a function

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 4.6.1
    • Some future release
    • None
    • MS Windows, Visual Studio 2005.
    • ba55b1fee6d7f1d7d669e291fd0e0db17b6c40ed

    Description

      When trying to pass an object (the id of an item) as an argument to a function, one gets the following error: "TypeError: incompatible type of argument(s) in call to changeCol(); candidates were changeCol(QVariant)", see attached file. When clicking in the window, the blue rectangle should become red.

      If the function is defined within a "Script"-block, it works as it should.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            brasser Michael Brasser (closed Nokia identity) (Inactive)
            stefan.josefsson Stefan Josefsson
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes