Correctly determine QScriptValue::isQObject() for QObjects using the QScriptDeclarativeClass.

This allows us to pass QObjects to QML-defined functions which expect
a QVariant (and will presumably help in other cases where we expect
transparent QObject <-> QVariant conversion in the engine).

Task-number: QTBUG-6178
Reviewed-by: Aaron Kennedy